working on the users resources

--- a/public/assets/views/hmo/clients-partials/enrollee/enrollee-info.html
+++ b/public/assets/views/hmo/clients-partials/enrollee/enrollee-info.html
@@ -1,144 +1,159 @@
 <div class="col-sm-12">
-    <div class="panel panel-white">
-        <div class="panel-heading border-light">
-            <h4 class="panel-title"><span class="text-bold">Basic Information</span></h4>
-        </div>
-        <div class="panel-body">
-            <div class="row">
-                <div class="col-md-2">
-                    <div class="user-left" style="border-right: 0px solid #dddddd;">
-                        <div class="">
-                            <h4 class="center"><b>{{enrolleeCtrl.enrollee.first_name}}, {{enrolleeCtrl.enrollee.last_name}}</b></h4>
-                            <div class="user-image">
-                                <div class="thumbnail">
-                                    <img src="{{enrolleeCtrl.enrollee.image_url}}" class="img-responsive img-rounded" alt="">
-                                </div>
-                            </div>
-                            <a class="btn btn-wide btn-primary create-enrollee center" href="#"  ng-click="imageChange()" style="margin-left: 18px"><i class="fa fa-plus"></i> Edit Image </a>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-10">
-                    <table class="table table-condensed">
-                        <thead>
-                        <tr>
-                            <th colspan="3">Contact Information</th>
-                        </tr>
-                        </thead>
-                        <tbody>
-                        <tr>
-                            <td>Name</td>
-                            <td>
-                                <a href="#" class="text-bold">
+	<div class="panel panel-white">
+		<div class="panel-heading border-light">
+			<h4 class="panel-title"><span class="text-bold">Basic Information</span></h4>
+			<div class="checkbox pull-right" style="margin-top: -24px;">
+				<switch id="enabled" name="enabled" ng-model="status" class="green" ng-click="enrolleeCtrl.activateEnrollee()"></switch>			
+			</div>
+		</div>
+		<div class="panel-body">
+			<div class="row">
+				<div class="col-md-2">
+					<div class="user-left" style="border-right: 0px solid #dddddd;">
+						<div class="">
+							<h4 class="center"><b>{{enrolleeCtrl.enrollee.first_name}}, {{enrolleeCtrl.enrollee.last_name}}</b></h4>
+							<div class="user-image">
+								<div class="thumbnail">
+									<img src="{{enrolleeCtrl.enrollee.image_url}}" class="img-responsive img-rounded" alt="" height="150px" width="150px" ng-if="enrolleeCtrl.checkForNull(enrolleeCtrl.enrollee.image_url)">
+									<img src="assets/images/backbone/enrollee.png" class="img-responsive img-rounded" alt="" height="150px" width="150px" ng-if="!enrolleeCtrl.checkForNull(enrolleeCtrl.enrollee.image_url)">
+								</div>
+							</div>
+							<a class="btn btn-wide btn-primary create-enrollee center" href="#" ng-click="imageChange()" style="margin-left: 18px"><i class="fa fa-plus"></i> Edit Image </a>
+						</div>
+					</div>
+				</div>
+				<div class="col-md-10">
+					<table class="table table-condensed">
+						<thead>
+							<tr>
+								<th colspan="3">Contact Information</th>
+							</tr>
+						</thead>
+						<tbody>
+							<tr>
+								<td>Name</td>
+								<td>
+									<a href="#" class="text-bold">
                                     {{enrolleeCtrl.enrollee.first_name}}, {{enrolleeCtrl.enrollee.last_name}}
                                 </a>
-                            </td>
-                        </tr>
-                        <tr>
-                            <td>Email:</td>
-                            <td>
-                                <a href class="text-bold">
+								</td>
+							</tr>
+							<tr>
+								<td>Email:</td>
+								<td>
+									<a href class="text-bold">
                                     {{enrolleeCtrl.enrollee.email}}
                                 </a>
-                            </td>
-                        </tr>
-                        <tr>
-                            <td>Phone:</td>
-                            <td class="text-bold">{{enrolleeCtrl.enrollee.phone}}</td>
-                        </tr>
+								</td>
+							</tr>
+							<tr>
+								<td>Phone:</td>
+								<td class="text-bold">{{enrolleeCtrl.enrollee.phone}}</td>
+							</tr>
 
-                        <tr>
-                            <td>ID:</td>
-                            <td class="text-bold">{{enrolleeCtrl.enrollee.generated_id}}</td>
-                        </tr>
+							<tr>
+								<td>ID:</td>
+								<td class="text-bold">{{enrolleeCtrl.enrollee.generated_id}}</td>
+							</tr>
 
-                        <tr>
-                            <td>Address:</td>
-                            <td class="text-bold">{{enrolleeCtrl.enrollee.street}}, {{enrolleeCtrl.enrollee.lg}}, {{enrolleeCtrl.enrollee.state}}, {{enrolleeCtrl.enrollee.country}}</td>
-                        </tr>
-                        <tr>
-                            <td>Status:</td>
-                            <td class="text-bold"><span class="label label-danger" ng-hide="{{enrolleeCtrl.enrollee.status}}" style="font-size: 16px;">inactive</span></td>
-                        </tr>
-                        </tbody>
-                    </table>
-                </div>
-            </div>
-        </div>
-    </div>
+							<tr>
+								<td>Address:</td>
+								<td class="text-bold">{{enrolleeCtrl.enrollee.street}}, {{enrolleeCtrl.enrollee.lg}}, {{enrolleeCtrl.enrollee.state}}, {{enrolleeCtrl.enrollee.country}}</td>
+							</tr>
+							<tr>
+								<td>Status:</td>
+								<td class="text-bold"><span class="label label-danger" ng-hide="{{enrolleeCtrl.enrollee.status}}" style="font-size: 16px;">inactive</span></td>
+							</tr>
+						</tbody>
+					</table>
+				</div>
+			</div>
+		</div>
+	</div>
 </div>
 
 <div class="col-sm-12">
-    <div class="panel panel-white">
-        <div class="panel-heading border-light">
-            <h4 class="panel-title"><span class="text-bold">Enrollee Dependents</span></h4>
-        </div>
-        <div class="panel-body">
-            <div class="col-sm-12">
-                <div class="panel panel-white" ng-repeat="dependent in enrolleeCtrl.dependents">
-                    <div class="panel-body">
-                        <div class="row" >
-                            <div class="col-md-2">
-                                <div class="user-left" style="border-right: 0px solid #dddddd;">
-                                    <div class="">
-                                        <h4 class="center"><b>{{dependent.first_name}}, {{dependent.last_name}}</b></h4>
-                                        <div class="user-image">
-                                            <div class="thumbnail">
-                                                <img src="{{dependent.image_url}}" class="img-responsive img-rounded" alt="">
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col-md-10">
-                                <table class="table table-condensed">
-                                    <thead>
-                                    <tr>
-                                        <th colspan="3">Contact Information</th>
-                                    </tr>
-                                    </thead>
-                                    <tbody>
-                                    <tr>
-                                        <td>Name</td>
-                                        <td>
-                                            <a href="#" class="text-bold">
+	<div class="panel panel-white">
+		<div class="panel-heading border-light">
+			<h4 class="panel-title"><span class="text-bold">Enrollee Dependents</span>
+			</h4>
+				<a class="btn btn-wide btn-primary pull-right" ng-if="enrolleeCtrl.dependents.length == 0" href="#" style="margin-top:-25px"><i class="fa fa-plus"></i> Create Dependent</a>
+		</div>
+		<div class="panel-body">
+			<div class="col-sm-12">
+				<div class="panel panel-white" ng-if="enrolleeCtrl.dependents.length == 0">
+					<div class="panel-body">
+						<div class="row">
+							<div class="col-md-12">
+								<h3>This Enrollee has no dependents.</h3>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="panel panel-white" ng-repeat="dependent in enrolleeCtrl.dependents" ng-if="enrolleeCtrl.dependents.length > 0">
+					<div class="panel-body">
+						<div class="row">
+							<div class="col-md-2">
+								<div class="user-left" style="border-right: 0px solid #dddddd;">
+									<div class="">
+										<h4 class="center"><b>{{dependent.first_name}}, {{dependent.last_name}}</b></h4>
+										<div class="user-image">
+											<div class="thumbnail">
+												<img src="{{dependent.image_url}}" class="img-responsive img-rounded" alt="">
+											</div>
+										</div>
+									</div>
+								</div>
+							</div>
+							<div class="col-md-10">
+								<table class="table table-condensed">
+									<thead>
+										<tr>
+											<th colspan="3">Contact Information</th>
+										</tr>
+									</thead>
+									<tbody>
+										<tr>
+											<td>Name</td>
+											<td>
+												<a href="#" class="text-bold">
                                                 {{dependent.first_name}}, {{dependent.last_name}}
                                             </a>
-                                        </td>
-                                    </tr>
-                                    <tr>
-                                        <td>Email:</td>
-                                        <td>
-                                            <a href class="text-bold">
+											</td>
+										</tr>
+										<tr>
+											<td>Email:</td>
+											<td>
+												<a href class="text-bold">
                                                 {{dependent.email}}
                                             </a>
-                                        </td>
-                                    </tr>
-                                    <tr>
-                                        <td>Phone:</td>
-                                        <td class="text-bold">{{dependent.phone}}</td>
-                                    </tr>
+											</td>
+										</tr>
+										<tr>
+											<td>Phone:</td>
+											<td class="text-bold">{{dependent.phone}}</td>
+										</tr>
 
-                                    <tr>
-                                        <td>ID:</td>
-                                        <td class="text-bold">{{dependent.generated_id}}</td>
-                                    </tr>
+										<tr>
+											<td>ID:</td>
+											<td class="text-bold">{{dependent.generated_id}}</td>
+										</tr>
 
-                                    <tr>
-                                        <td>Address:</td>
-                                        <td class="text-bold">{{dependent.street}}, {{dependent.lg}}, {{dependent.state}}, {{dependent.country}}</td>
-                                    </tr>
-                                    <tr>
-                                        <td>Status:</td>
-                                        <td class="text-bold"><span class="label label-danger" ng-hide="{{dependent.status}}" style="font-size: 16px;">inactive</span></td>
-                                    </tr>
-                                    </tbody>
-                                </table>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
+										<tr>
+											<td>Address:</td>
+											<td class="text-bold">{{dependent.street}}, {{dependent.lg}}, {{dependent.state}}, {{dependent.country}}</td>
+										</tr>
+										<tr>
+											<td>Status:</td>
+											<td class="text-bold"><span class="label label-danger" ng-hide="{{dependent.status}}" style="font-size: 16px;">inactive</span></td>
+										</tr>
+									</tbody>
+								</table>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
 </div>
