--- a/public/assets/views/hmo/clients-partials/modals/enrollee_delete.html
+++ b/public/assets/views/hmo/clients-partials/modals/enrollee_delete.html
@@ -1,17 +1,23 @@
 <script type="text/ng-template" id="myModalContent.html">
     <div class="modal-header">
-        <h3 class="modal-title">I'm a modal!</h3>
+        <h4 class="modal-title center">Delete enrollee</h3>
     </div>
     <div class="modal-body">
-        <ul>
-            <li ng-repeat="item in items">
-                <a ng-click="selected.item = item">{{ item }}</a>
-            </li>
-        </ul>
-        Selected: <b>{{ selected.item }}</b>
+        <p>
+            Deleting an enrollee is irreversible. Enter your the enrollee's email
+            ({{email}}) below to confirm you want to permanently delete the enrollee:
+        </p>
+        <h4 class="text-danger text-large" ng-show="wrong_email">The email does not match for this enrollee</h4>
+        <h4 class="text-danger text-large" ng-show="empty_input">Please type the correct email into the box</h4>
+
+        <div class="row">
+            <div class="col-sm-12">
+                <input type="email"  id="inputPassword3" class="form-control" name="email" ng-model="delete_email" required>
+            </div>
+        </div>
     </div>
     <div class="modal-footer">
-        <button class="btn btn-primary" ng-click="ok()">OK</button>
         <button class="btn btn-primary btn-o" ng-click="cancel()">Cancel</button>
+        <button class="btn  btn-danger danger-gradient" ng-click="deleteEnrollee()">Delete</button>
     </div>
 </script>
