--- a/public/assets/views/hmo/clients.html
+++ b/public/assets/views/hmo/clients.html
@@ -22,7 +22,6 @@
                                 <div class="col-sm-12">
                                     <div class="panel panel-white no-radius">
                                         <div class="panel-heading border-light" style="padding-bottom: 50px !important;">
-
                                             <div class=" pull-right">
                                                 <a class="btn btn-wide btn-primary create-enrollee" href="#" ng-click="open()"><i class="fa fa-plus"></i> Create Enrollee</a>
                                             </div>
@@ -43,7 +42,10 @@
                                                     </thead>
                                                     <tbody>
                                                     <tr ng-repeat="enrollee in hmoClient.enrollees" on-last-repeat>
-                                                        <td class="center" ng-click="hmoClient.showEnrollee(enrollee.enrollee_id)" style="cursor: pointer;" ><img src="{{ enrollee.image_url}}" class="img-rounded" alt="image" height="50px"/></td>
+                                                        <td class="center" ng-click="hmoClient.showEnrollee(enrollee.enrollee_id)" style="cursor: pointer;" >
+                                                            <img src="{{ enrollee.image_url}}" class="img-rounded" alt="image" height="50px" ng-if="hmoClient.checkForNull(enrollee.image_url)"/>
+                                                            <img src="assets/images/backbone/enrollee.png" class="img-rounded" alt="image" height="50px" ng-if="!hmoClient.checkForNull(enrollee.image_url)"/>
+                                                        </td>
                                                         <td class="hidden-xs">{{enrollee.generated_id}}</td>
                                                         <td class="hidden-xs">{{ enrollee.first_name }}, {{ enrollee.last_name }}</td>
                                                         <td class="hidden-xs"><a href="#" rel="nofollow" target="_blank"> {{ enrollee.email }} </a></td>
@@ -54,9 +56,9 @@
                                                         </td>
                                                         <td class="center">
                                                             <div class="visible-md visible-lg hidden-sm hidden-xs">
-                                                                <a href="#" class="btn btn-transparent btn-xs" tooltip-placement="top" uib-tooltip="Edit"><i class="fa fa-pencil"></i></a>
+                                                                <a href="/#/partners/dashboard/clients/enrollee/{{enrollee.enrollee_id}}?tabIndex=1" class="btn btn-transparent btn-xs" tooltip-placement="top" uib-tooltip="Edit"><i class="fa fa-pencil"></i></a>
                                                                 </a>
-                                                                <a href="#" class="btn btn-transparent btn-xs tooltips" ng-click="delete()" tooltip-placement="top" uib-tooltip="Remove"><i class="fa fa-times fa fa-white"></i></a>
+                                                                <a href="#" class="btn btn-transparent btn-xs tooltips" ng-click="delete(enrollee.email, enrollee.enrollee_id)" tooltip-placement="top" uib-tooltip="Remove"><i class="fa fa-times fa fa-white"></i></a>
                                                             </div>
                                                             <div class="visible-xs visible-sm hidden-md hidden-lg">
                                                                 <div class="btn-group" uib-dropdown>
